conf/kube-system/dashboard/service-kubernetes-dashboard.yaml
# service
---
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30001
      targetPort: 9090
  selector:
    k8s-app: kubernetes-dashboard
